2015-06-04  Youri Hoogstrate
	* Added ReadSegments

2015-05-06  Youri Hoogstrate
	* Added SubSequence and made SegmentTree compatible with it rather than the PairingPlus
	* Added DEBUG tests to PairingPlus

2015-05-02  Youri Hoogstrate
	* Added PairingPlus code, test and datetypes.
	* Added SegmentTree and SegmentTree code
	* Dates have changed to 'ISO 8601' representation
	* Added DotBracket code and test
	* Changed some code in Segments.cpp to one-liners
	* Configuration for tests are now compatible with cmake 3.*

2015-05-01  Youri Hoogstrate
	* Added automatic inclusion of git SHA1 into include/config.hpp
	* Added tests for SegmentTree and SegmentTreeElement

2015-04-17  Youri Hoogstrate
	* Added automatic parsing of README.md by running 'make readme'
	* Added automatic parsing of documentation, including latest README
	  by running 'make doc'
	* Added 'make tidy' command to make the code formatted with astyle.

2015-04-16  Youri Hoogstrate
	* Added Segment() class + tests

2015-04-15  Youri Hoogstrate
	* Added Sequence() class
	* Added Position
	* Added tests
	* Updated cmake

2015-04-14  Youri Hoogstrate
	* Added two util functions:
	  - min()
	  - file_exists()

2015-02-25  Youri Hoogstrate
	* Added Direction definition
	* Added Sequence definition

2014-12-03  Youri Hoogstrate
	* Changed directory structure; separated header files in ./include.
	* Changed from autotools to CMake.